integration_tests/codegen_fail/fail/union/impl_same_type.rs.disabled
// NOTICE: This can not be tested. Implementing Into<T> for each
// variant is not possible since we did not created the
// enum. Therefore, it is possible that the enum already has existing
// Into<T> implementations.

#[derive(juniper::GraphQLObject)]
pub struct Test {
    test: String,
}

enum Character {
    A(Test),
    B(Test),
}

#[juniper::graphql_union]
impl Character {
    async fn resolve(&self) {
        match self {
            Test => match *self {
                Character::A(ref h) => Some(h),
                _ => None,
            },
            Test => match *self {
                Character::B(ref h) => Some(h),
                _ => None,
            },
        }
    }
}

fn main() {}
